# nextclimb-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  entrypoint.sh  entrypoint_prod.sh  main.py  pyproject.toml
activity/: admin.py  api.py  models.py  schemas.py  scratch.py  utils.py
activity/migrations/: 0001_initial.py  0002_geocodedlocation.py  0003_searchfeedback.py  0004_add_comment_nullable_vote.py  0005_add_emailsignup.py
core/: api.py  settings.py  urls.py
users/: api.py  fitness.py  models.py  schemas.py  utils.py
users/migrations/: 0001_initial.py  0002_userstrava.py  0003_userstrava_user.py  0004_userstrava_scope.py  0005_add_userfitnessprofile.py
