[project]
name = "nextclimb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.5.1",
    "django-redis>=6.0.0",
    "django-types>=0.22.0",
    "geopy>=2.4.1",
    "google-auth>=2.48.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "stravalib>=2.4",
    "uvicorn>=0.40.0",
]
